--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "grunt-contrib-watch": "~0.4.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt": "~0.4.2",
-    "grunt-contrib-connect": "~0.6.0"
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-gh-pages": "~0.9.0",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
