--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jquery-plugin",
-  "version": "0.0.0-ignored",
+  "name": "scrollstory",
+  "version": "0.0.1",
   "engines": {
     "node": ">= 0.8.0"
   },
