--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "authors": [
         "Josh Williams <contact@joshwilliams.com>"
     ],
-    "description": "jQuery UI widget for stacked, scroll-based elements that need to give focus to a single item at a time.",
+    "description": "A jQuery UI widget for building simple, scroll-based pages and interactions.",
     "main": "dist/scrollstory.js",
     "license": "MIT",
     "private": true,
