--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "scrollstory",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "homepage": "https://github.com/sjwilliams/scrollstory",
     "authors": [
         "Josh Williams <contact@joshwilliams.com>"
@@ -9,10 +9,13 @@
     "main": "dist/scrollstory.js",
     "license": "MIT",
     "private": false,
+    "dependencies": {
+      "jquery": ">=1.7",
+      "jquery-ui": "~1.10.3",
+      "underscore": "~1.5.2"
+    },
     "devDependencies": {
-        "jquery": "~1.9.0",
-        "jquery-ui": "~1.10.3",
-        "underscore": "~1.5.2"
+
     },
     "ignore": [
         "**/.*",
