--- a/package.json
+++ b/package.json
@@ -20,16 +20,28 @@
     }
   ],
   "devDependencies": {
-    "autoprefixer": "^5.1.1",
-    "beautiful-docs": "^1.0.3",
-    "cssmin": "^0.4.3",
-    "jshint": "^2.7.0"
+    "http-server": "^0.8.0",
+    "jshint": "^2.7.0",
+    "markx": "^0.4.0",
+    "nodemon": "^1.3.7"
   },
   "scripts": {
-    "lint": "jshint src/jquery.scrollstory.js",
-    "clean": "rm -rf build && mkdir build",
-    "docs:css": "autoprefixer -b 'last 2 versions' < build/overview.css | cssmin > build/overview.css",
-    "docs:html": "bfdocs --theme='documentation/theme' ./ build && rm build/index.html && rm build/all.html && mv build/readme.html build/index.html",
-    "docs": "npm run clean && npm run docs:html && npm run docs:css"
+    "lint": "jshint jquery.scrollstory.js",
+    "clean": "mkdir -p build && rm -rf build/* && mkdir -p build/js && mkdir build/css",
+    "clean:docsjs": "mkdir -p build/js && rm -rf build/js/*",
+    "clean:docscss": "mkdir -p build/css && rm -rf build/css/*",
+    "clean:docshtml": "mkdir -p build && rm -f build/index.html",
+    "docs:html": "npm run clean:docshtml && markx --highlight --template documentation/index-template.html README.md > build/index.html",
+    "docs:css": "npm run clean:docscss && cp -R documentation/css build && postcss --use autoprefixer --autoprefixer.browsers '> 5%' -d build/css/ build/css/base-*",
+    "docs:js": "npm run clean:docsjs && cp -R documentation/js build && cp jquery.scrollstory.js build/js",
+    "docs:build": "npm run clean && npm run docs:html && npm run docs:css && npm run docs:js",
+    "watch:docscss": "nodemon -e css --ignore build/ --ignore node_modules -x 'npm run docs:css'",
+    "watch:docsjs": "nodemon -e js --ignore build/ --ignore node_modules -x 'npm run docs:js'",
+    "watch:docshtml": "nodemon -e html,css,json,md --ignore build/ --ignore node_modules -x 'npm run docs:html'",
+    "serve": "http-server build/",
+    "watch": "npm run watch:docsjs & npm run watch:docshtml & npm run watch:docscss",
+    "start": "npm run watch && npm serve",
+    "prestart": "npm run clean",
+    "prewatch": "npm run docs:build"
   }
 }
