--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scrollstory",
   "description": "A jQuery plugin for building simple, scroll-based pages and interactions.",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/sjwilliams/scrollstory.git"
@@ -24,28 +24,26 @@
     "jshint": "^2.7.0",
     "markx": "^0.4.0",
     "nodemon": "^1.3.7",
-    "parallelshell": "^1.1.1"
+    "parallelshell": "^1.1.1",
+    "uglify-js": "^2.4.23"
   },
   "scripts": {
     "clean": "mkdir -p build && rm -rf build/* && mkdir -p build/js && mkdir -p build/css",
     "clean:docsjs": "mkdir -p build/js && rm -rf build/js/*",
     "clean:docscss": "mkdir -p build/css && rm -rf build/css/*",
     "clean:docshtml": "mkdir -p build && rm -f build/index.html",
-    
     "docs:html": "npm run clean:docshtml && markx --highlight --template documentation/index.tmpl README.md > build/index.html && cp documentation/*.html build/",
     "docs:css": "npm run clean:docscss && cp -R documentation/css build && postcss --use autoprefixer --autoprefixer.browsers '> 5%' -d build/css/ build/css/base-*",
     "docs:js": "npm run clean:docsjs && cp -R documentation/js build && cp jquery.scrollstory.js build/js",
-
     "watch:docscss": "nodemon -e css --ignore build/ --ignore node_modules -x 'npm run docs:css'",
-    "watch:docsjs": "nodemon -e js --ignore build/ --ignore node_modules -x 'npm run docs:js'",
+    "watch:docsjs": "nodemon -e js --ignore build/ --ignore node_modules --ignore dist -x 'npm run docs:js'",
     "watch:docshtml": "nodemon -e html,json,md --ignore build/ --ignore node_modules -x 'npm run docs:html'",
     "watch": "parallelshell 'npm run watch:docsjs' 'npm run watch:docshtml' 'npm run watch:docscss'",
-    
     "lint": "jshint jquery.scrollstory.js",
     "server": "http-server build/",
     "start": "parallelshell 'npm run watch' 'npm run server'",
     "build": "npm run docs:html && npm run docs:css && npm run docs:js",
-    
+    "dist": "npm run lint && npm run build && currentdate=`date +%Y-%m-%d` && version=`grep '\"version\"' package.json | sed 's/[^0-9\\.]//g'` && sed \"s/VERSIONXXX/$version/g\" jquery.scrollstory.js | sed \"s/YYYY-MM-DDXXX/$currentdate/g\" > dist/jquery.scrollstory.js && uglifyjs --comments -o dist/jquery.scrollstory.min.js dist/jquery.scrollstory.js",
     "preserver": "npm run clean && npm run build"
   }
 }
