--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     }
   ],
   "devDependencies": {
+    "autoprefixer": "^5.2.0",
     "http-server": "^0.8.0",
     "jshint": "^2.7.0",
     "markx": "^0.4.0",
     "nodemon": "^1.3.7",
     "parallelshell": "^1.1.1",
+    "postcss-cli": "^1.3.1",
     "uglify-js": "^2.4.23"
   },
   "scripts": {
