--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "devDependencies": {
     "autoprefixer": "^5.2.0",
     "http-server": "^0.8.0",
+    "jquery": "^2.1.4",
+    "js-beautify": "^1.5.6",
+    "jsdom": "^3.1.2",
     "jshint": "^2.7.0",
     "markx": "^0.4.0",
     "nodemon": "^1.3.7",
     "parallelshell": "^1.1.1",
     "postcss-cli": "^1.3.1",
-    "uglify-js": "^2.4.23",
-    "jquery": "^2.1.4",
-    "jsdom": "^3.1.2"
+    "uglify-js": "^2.4.23"
   },
   "scripts": {
     "clean": "mkdir -p build && rm -rf build/* && mkdir -p build/js && mkdir -p build/css",
