--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scrollstory",
   "description": "A jQuery plugin for building simple, scroll-based pages and interactions.",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "repository": {
     "type": "git",
     "url": "https://github.com/sjwilliams/scrollstory.git"
@@ -26,7 +26,7 @@
     "js-beautify": "^1.5.6",
     "jsdom": "^11.1.0",
     "jshint": "^2.7.0",
-    "markx": "^0.4.0",
+    "markx": "sjwilliams/markx",
     "nodemon": "^1.3.7",
     "parallelshell": "^1.1.1",
     "postcss-cli": "^1.3.1",
