--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "scrolling"
   ],
   "license": "MIT",
-  "author": [{
-    "name": "Josh Williams",
-    "email": "contact@joshwilliams.com"
-  }],
+  "author": [
+    {
+      "name": "Josh Williams",
+      "email": "contact@joshwilliams.com"
+    }
+  ],
   "devDependencies": {
     "autoprefixer": "^5.2.0",
     "http-server": "^0.8.0",
@@ -25,7 +27,7 @@
     "jshint": "^2.7.0",
     "markx": "sjwilliams/markx",
     "nodemon": "^1.3.7",
-    "parallelshell": "^1.1.1",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^1.3.1",
     "uglify-js": "^2.4.23"
   },
@@ -40,10 +42,10 @@
     "watch:docscss": "nodemon -e css --ignore build/ --ignore node_modules -x 'npm run docs:css'",
     "watch:docsjs": "nodemon -e js --ignore build/ --ignore node_modules --ignore dist -x 'npm run docs:js'",
     "watch:docshtml": "nodemon -e html,json,md --ignore build/ --ignore node_modules -x 'npm run docs:html'",
-    "watch": "parallelshell 'npm run watch:docsjs' 'npm run watch:docshtml' 'npm run watch:docscss'",
+    "watch": "npm-run-all watch:*",
     "lint": "jshint jquery.scrollstory.js",
     "server": "http-server build/",
-    "start": "parallelshell 'npm run watch' 'npm run server'",
+    "start": "npm-run-all watch server",
     "build": "npm run docs:html && npm run docs:css && npm run docs:js",
     "dist": "npm run lint && npm run build && currentdate=`date +%Y-%m-%d` && version=`grep '\"version\"' package.json | sed 's/[^0-9\\.]//g'` && sed \"s/VERSIONXXX/$version/g\" jquery.scrollstory.js | sed \"s/YYYY-MM-DDXXX/$currentdate/g\" > dist/jquery.scrollstory.js && uglifyjs --comments -o dist/jquery.scrollstory.min.js dist/jquery.scrollstory.js",
     "preserver": "npm run clean && npm run build"
